[gd_scene load_steps=5 format=3 uid="uid://cdexqegkymx2g"]

[ext_resource type="Script" uid="uid://bwt6kip77qt03" path="res://Scripts/Overworld/location_card.gd" id="1_wbbyy"]
[ext_resource type="Theme" uid="uid://b8xwdra3nuahy" path="res://Art/Themes/text_header.tres" id="2_6tiqu"]
[ext_resource type="Theme" uid="uid://cxuwiageci4sa" path="res://Art/Themes/panel_container.tres" id="2_46q34"]
[ext_resource type="Theme" uid="uid://bbm7dwwhqexow" path="res://Art/Themes/text.tres" id="3_46q34"]

[node name="LocationCard" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_wbbyy")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -197.0
offset_top = -441.0
offset_right = 197.0
offset_bottom = -162.0
theme = ExtResource("2_46q34")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("2_6tiqu")
text = "Location Name"
horizontal_alignment = 1

[node name="Control" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Faction" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Control"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("3_46q34")
text = "Reputation:"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FactionValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("3_46q34")
text = "???"
horizontal_alignment = 1

[node name="Control2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Difficulty" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Control2"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("3_46q34")
text = "Difficulty:"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Control2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DifficultyValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Control2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("3_46q34")
text = "???"
horizontal_alignment = 1

[node name="Control3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Resources" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Control3"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("3_46q34")
text = "Resources:"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/Control3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResourcesValue" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Control3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("3_46q34")
text = "???"
horizontal_alignment = 1
